--- a/saas.css
+++ b/saas.css
@@ -1057,8 +1057,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .num_button > a::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1760,8 +1758,6 @@ a.blog_btn{
 a.blog_btn::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1801,7 +1797,8 @@ a.blog_btn::after{
 .saas_area_ten{
 	max-width: 1280px;
 	margin: 0 auto 2em;
-	padding: 0 35px;
+	padding: 0 30px;
+	width: calc(100% - 60px);
 	position: relative;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -1859,7 +1856,7 @@ a.blog_btn::after{
 
 .col_info input[type="email"]{
 	width: 350px;
-	padding: 12px 20px 14px;
+	padding: 11px 14px 14px;
 	border: solid 1px #e0e0e0;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
@@ -1874,13 +1871,12 @@ a.blog_btn::after{
 .col_info input[type="submit"]{
 	display: inline-block;
 	width: auto;
-	padding: 11px 24px;
+	padding: 10px 24px 11px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: 500;
 	text-transform: uppercase;
-	margin: 0;
 	margin-left: -4px;
 	color: #ffffff;
 	border-radius: 0;
@@ -2113,6 +2109,14 @@ a.footer-brand img{
 		flex: 100%;
 		width: 100%;
 		margin-top: 0;
+	}
+	
+	.col_info input[type="submit"]{
+		padding: 10px 24px 12px;
+	}
+
+	.col_info input[type="email"]{
+		padding: 12px 14px 13px;
 	}
 	
 	.col_head{
