--- a/gym-fitness.css
+++ b/gym-fitness.css
@@ -802,8 +802,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .grid_button > a::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1065,8 +1063,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .area_button > a::after{
 	content: "\203A";
 	font-size: 20px;
-	margin: 0;
-	padding: 0;
 	display: inline-block;
 	height: auto;
 	padding-left: 5px;
@@ -1983,6 +1979,10 @@ a.footer-brand img{
 	.num_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.bg_head{
+		font-size: 25px;
 	}
 }
 
