--- a/contact-us-02.css
+++ b/contact-us-02.css
@@ -399,15 +399,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .header-title__sub{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
+	font-size: 18px;
 	font-weight: normal;
 	display: block;
 	color: #696969;
 	line-height: 1.4em;
 	letter-spacing: 1px;
 	text-align: center;
-	max-width: 500px;
-	padding-top: 15px;
+	max-width: 550px;
+	padding-top: 25px;
 	margin: auto;
 }
 
@@ -698,10 +698,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	height: 40px;
 	border: none;
 	margin: 8px 0;
+        border: solid 1px #e0e0e0;
 	flex-grow: 1;
 	letter-spacing: 1px;
 	transition: 0.5s;
-	background-color: #f6f6f6;
 }
 
 .form-box textarea{
@@ -712,10 +712,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: auto;
 	min-height: 125px;
 	margin: 8px 0;
+        border: solid 1px #e0e0e0;
 	flex-grow: 1;
 	letter-spacing: 1px;
 	transition: 0.5s;
-	background-color: #f6f6f6;
 }
 
 .form-box input[type="text"]:focus,
@@ -738,6 +738,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 	background-color: #009fff;
 	border: solid 1px #009fff;
+        border-radius: 0;
 	transition: 0.5s;
 }
 
