--- a/scientific-research.css
+++ b/scientific-research.css
@@ -522,8 +522,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: auto;
 	font-size: 14px;
 	transition: 0.6s ease;
-	border-radius: 0 3px 3px 0;
-	background-color: transparent;
+	background: transparent;
 	display: block;
 	padding: 10px 16px;
 	color: #ffffff;
