--- a/construction.css
+++ b/construction.css
@@ -462,11 +462,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a{
-	background-color: #1a2980;
 	width: 150px;
 	min-height: 35px;
     border: none;
-    color: #ffc91a;
     padding: 13px 14px;
     text-decoration: none;
 	text-transform: uppercase;
@@ -476,29 +474,34 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #1a2980;
 	letter-spacing: 1px;
 	text-align: center;
 	margin-right: 15px;
 	margin-bottom: 20px;
 }
 
-.right_btn{
-	background-color: #ffc91a !important;
-	color: #1a2980 !important;
-	border: 1px solid #ffc91a !important;
+.left_btn{
+	background-color: #1a2980;
+	color: #ffc91a;
+	border: 1px solid #1a2980;
 }
 
-.right_btn:hover{
-	color: #ffffff !important;
-	background-color: #1a2980 !important;
-	border-color: #1a2980 !important;
-}
-
-.buttoncol a:hover{
+.left_btn:hover{
 	color: #ffffff;
 	background-color: #ffc91a;
 	border-color: #ffc91a;
+}
+
+.right_btn{
+	background-color: #ffc91a;
+	color: #1a2980;
+	border: 1px solid #ffc91a;
+}
+
+.right_btn:hover{
+	color: #ffffff;
+	background-color: #1a2980;
+	border-color: #1a2980;
 }
 
 .prev_button{
