--- a/restaurant.css
+++ b/restaurant.css
@@ -414,7 +414,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .head_btn a:hover{
-	background-color: transparent;
+	background: transparent;
 	color: #111111;
 	border-color: #111111;
 }
@@ -498,16 +498,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-right: 15px;
 }
 
-.right_btn{
-	background-color: #111111!important;
-	color: #ffffff !important;
-	border: 1px solid #111111!important;
+#right_btn{
+	background-color: #111111;
+	color: #ffffff;
+	border: 1px solid #111111;
 }
 
-.buttoncol a:hover{
-	color: #111111 !important;
-	background: transparent !important;
-	border-color: #111111 !important;
+.buttoncol a:hover,
+#right_btn:hover{
+	color: #111111;
+	background: transparent;
+	border-color: #111111;
 }
 
 .prev_button{
