--- a/about-us-03.css
+++ b/about-us-03.css
@@ -1156,16 +1156,16 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	border-color: #111111;
 }
 
-.right_btn{
-	background: transparent !important;
-	color: #111111 !important;
-	border: 1px solid #111111 !important;
+#right_btn{
+	background: transparent;
+	color: #111111;
+	border: 1px solid #111111
 }
 
-.right_btn:hover{
-	color: #ffffff!important;
-	background-color: #009fff!important;
-	border-color: #009fff!important;
+#right_btn:hover{
+	color: #ffffff;
+	background-color: #009fff;
+	border-color: #009fff;
 }
 
 /* --- 3.7. About Area Seven --- */
