--- a/law-firm.css
+++ b/law-firm.css
@@ -98,23 +98,10 @@ ul{
 	color: #111111;
 	text-align: center;
 	letter-spacing: 1px;
-	line-height: 1.3em;
+	line-height: 1.2em;
 	max-width: 600px;
-	margin: auto;
-}
-
-.law_info{
-	max-width: 600px;
-	margin: 0 auto;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: center;
-	padding: 10px 10px 0;
-	line-height: 1.5em;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 /* 2. HEADER
@@ -615,7 +602,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 800;
 	display: block;
 	text-align: left;
-	color: #eeeeee;
+	color: #999966;
 	letter-spacing: 1px;
 	line-height: 1.2em;
 	text-transform: uppercase;
@@ -691,38 +678,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 10px 0;
 }
 
-.num_button > a{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 13px;
-	font-weight: 600;
-	letter-spacing: 1px;
-	text-align: center;
-	text-transform: uppercase;
-	display: block;
-	color: #999966;
-	text-decoration: none;
-	width: 120px;
-	transition: 0.5s;
-    cursor: pointer;
-	margin: auto;
-}
-
-.num_button > a::after{
-	position: relative;
-	top: 1px;
-	content: "\203A";
-	font-size: 20px;
-	display: inline-block;
-	padding-left: 5px;
-}
-
-.num_button > a:hover{
-	color: #111111;
-}
-
 .slick-dots{
 	position: relative;
 	z-index: 999999;
+	bottom: -30px;
 	display: flex;
 	justify-content: center;
 	margin: 0;
@@ -749,7 +708,7 @@ li.slick-active button{
 }
 
 .slick-dots li{
-	margin: 25px 0.40rem;
+	margin: 0 0.40rem;
 }
 
 .law_right_col .slickslide{
@@ -765,9 +724,8 @@ li.slick-active button{
 /* --- 3.2. Law Area Two --- */
 .law_area_two{
 	max-width: 1280px;
-	margin: 0 auto 0;
+	margin: 0 auto 9em;
 	padding: 0 25px;
-	margin-bottom: calc(9em + 40px);
 }
 
 .law_group_two{
@@ -1724,14 +1682,6 @@ a > span.icon-25{
 	padding-bottom: 40px;
 }
 
-.dark_head{
-	color: #111111 !important;
-}
-
-.dark_info{
-	color: #696969 !important;
-}
-
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
@@ -2219,6 +2169,9 @@ a.footer-brand img{
 	.icon_col{
 		flex: 50%;
 		width: 50%;
+	}
+	
+	.icon_space{
 		margin-bottom: 40px;
 	}
 	
@@ -2418,6 +2371,10 @@ a.footer-brand img{
 	.icon_col{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.last_icon_space{
+		margin-bottom: 40px;
 	}
 	
 	.square_slider{
