--- a/consulting.css
+++ b/consulting.css
@@ -1150,7 +1150,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: flex;
 	flex-wrap: wrap;
 	min-height: 250px;
-	background-color: #eeeeee;
+	background-color: #ffffff;
 	padding: 25px 25px 40px 25px;
 	margin: 100px auto 0;
 	box-shadow: 0 20px 70px rgba(38,42,76,.2);
