--- a/construction.css
+++ b/construction.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Upstake - Multipurpose Business Template
 Version:    1.0
-Last change:    04/03/2024
+Last change:    18/05/2024
 Author:    creativemaze
 Primary use:    Construction
 -------------------------------------------------------------------*/
@@ -33,6 +33,8 @@ Primary use:    Construction
 
 /* 1. GENERAL
  ----------- */
+ 
+ 
 body,
 html{
 	width:100%;
@@ -95,6 +97,34 @@ h2{
 	}
 }
 
+.construct_head{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	display: block;
+	color: #1a2980;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.2em;
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.construct_info{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: center;
+	padding: 10px 10px 0;
+	line-height: 1.5em;
+	max-width: 600px;
+	margin: auto;
+}
+
 .bg_head{
 	color: #ffffff;
 	font-family: 'Montserrat' , Arial, sans-serif;
@@ -120,7 +150,7 @@ h2{
 	padding-top: 10px;
 	line-height: 1.5em;
 	max-width: 600px;
-	margin: 0 auto;
+	margin: auto;
 }
 
 /* 2. HEADER
@@ -138,7 +168,7 @@ h2{
 	text-align: center;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	margin-top: 26px;
+	margin-top: 30px;
 }
 
 .navbar-header > a:hover{
@@ -149,18 +179,13 @@ h2{
 	max-width: 160px; 
 	min-height: 10px;
 	position: relative;
-	top: 30px;
+	top: 33px;
 }
 
 #nav-logo > a img{
    position: relative;
    max-width: 160px;
    height: auto;
-   
-}
-
-.navbar-header a.navbar-brand:hover{
-	color: #111111;
 }
 
 nav.navbar.bootsnav{
@@ -171,6 +196,7 @@ nav.navbar.bootsnav{
 
 nav.navbar.bootsnav ul.nav{
 	margin-right: 160px;
+	margin-top: 5px;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -266,7 +292,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .attr-nav > ul > li > a{
     color: #111111;
-	padding-top: 30px;
+	padding-top: 36px;
 	margin-left: -12px;
 	position: relative;
 	left: -160px;
@@ -318,7 +344,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .left_info .fas,
 .left_info .far,
-.right_info .fab{
+.right_info > a > .fab{
 	font-size: 16px;
 	color: #ffffff;
 }
@@ -328,13 +354,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-right: 8px;
 }
 
-.right_info > a{
+.right_info  > a .fab{
 	padding-right: 14px;
+	transition: 0.5s;
 }
 
-.left_info .fas:hover,
-.right_info .fab:hover{
-	opacity: 0.5;
+.right_info > a > .fab:hover{
+	color: #111111;
 }
 
 .sub_width{
@@ -373,7 +399,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 300px;
 	display: inline-block;
 	position: absolute;
-	top: 15px;
+	top: 19px;
 	right: 0;
 }
 
@@ -462,7 +488,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	bottom: 30px;
 }
 
-.header-title__main::first-letter{
+.header-title__main .first-letter{
 	border: double 5px #ffffff;
 	padding: 10px;
 }
@@ -622,14 +648,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: -55px;
 }
 
-.icon_symbol .material-symbols-outlined.icon-60{
-	font-size: 60px;
-	font-weight: 100;
+.icon_symbol .fi{
+	font-size: 38px;
 	color: #ffffff;
 	display: inline-block;
 	text-align: left;
 	position: absolute;
-	right: 10px;
+	right: 20px;
 	bottom: 10px
 }
 
@@ -702,7 +727,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 1280px;
 	margin: 0 auto 0;
 	padding: 0 25px;
-	margin-bottom: calc(9em + 65px);
+	margin-bottom: calc(9em + 30px);
 }
 
 .construct_group_two{
@@ -900,15 +925,36 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.3. Construction Area Three --- */
 .construct_area_three{
+	width: 100%;
+	margin: 0 0 9em;
+}
+
+.construct_group_three{
+	max-width: 1280px;
+	margin: auto;
+	padding: 0 25px;
+}
+
+.bg_group{
 	position: relative;
 	width: 100%;
-	min-height: 450px;
+	margin-top: 40px;
+}
+
+.bg_slider{
+	width: 100%;
+}
+
+.bg_area{
+	min-height: 600px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+	position: relative;
+	z-index: 999;
 }
 
-.construct_area_three::before {
+.bg_area::before {
 	content: '';
 	position: absolute;
 	z-index: 1;
@@ -919,80 +965,72 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background: rgba(24, 25, 34, 0.6);
 }
 
-/* --- 3.4. Construction Area Four --- */
-.construct_area_four{
+.bg_feature{
 	position: relative;
 	z-index: 999;
-	max-width: 1000px;
-	margin: -350px auto 9em;
-	padding: 0 25px;
-}
-
-.construct_group_four{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 40px;
+	min-height: 600px;
 }
 
-.grid_col{
+.bg_col{
 	position: relative;
-	flex: 25%;
-	width: 25%;
+	z-index: 999;
+	flex: 33.33%;
+	width: 33.33%;
+	padding-right: 40px;
+	min-height: 600px;
+	border-right: double 1px #6f6f6f;
 }
 
-.grid_box{
-	max-width: 250px;
-	margin: 0 auto;
-	text-align: center;
-	padding: 25px 15px;
-	border-right: dotted 1px #ffc91a;
-	position: relative;
-	background-color: #1a2980;
+.bg_col:hover{
+	cursor: pointer;
 }
 
-.fourth_border{
+.third_border{
 	border-right: none;
 }
 
-.grid_image{
-	position: relative;
-	width: 150px;
-	height: 150px;
-	margin: auto;
+.bg_content{
+	position: absolute;
+	bottom: 40px;
+	left: 25px;
+	max-width: 375px;
+	background: rgba(0,0,0,0.6);
+	padding: 40px 20px 15px;
 }
 
-.grid_image img{
-	width: 100%;
-	height: auto;
-	display: block;
-	border-radius: 50%;
-}
-
-.grid_info h3{
+.bg_content h3{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: 600;
 	display: block;
-	text-align: center;
 	color: #ffffff;
+	text-align: left;
+	text-transform: uppercase;
 	letter-spacing: 1px;
 	line-height: 1.4em;
 }
 
-.grid_info p{
+.bg_content h3 .first-letter{
+	border: double 5px #ffffff;
+	padding: 10px;
+}
+
+.bg_content p{
 	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: normal;
+	padding-top: 10px;
 	display: block;
 	color: #dddddd;
 	letter-spacing: 1px;
-	text-align: center;
+	text-align: left;
 	line-height: 1.5em;
-	padding: 10px 0;
 }
 
-.grid_button a{
+.bg_btn a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 600;
@@ -1007,7 +1045,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transition: 0.5s;
 }
 
-.grid_button a::after{
+.bg_btn a::after{
 	content: "\203A";
 	position: relative;
 	top: 1px;
@@ -1016,16 +1054,22 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-left: 5px;
 }
 
-.grid_button a:hover{
+.bg_btn a:hover{
 	color: #ffffff;
 }
 
-/* --- 3.5. Construction Area Five --- */
-.construct_area_five{
+/* --- 3.4. Construction Area Four --- */
+.construct_area_four{
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 25px;
 	margin-bottom: calc(9em - 15px);
+}
+
+.construct_group_four{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .construct_group_info{
@@ -1073,15 +1117,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transition: 0.5s;
 }
 
-.filtertitle.active,
+.filtertitle.activetitle,
 .filtertitle:hover {
 	color: #ffc91a;
-}
-
-.construct_group_five{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
 }
 
 .portfolio_col{
@@ -1164,8 +1202,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #111111;
 }
 
-/* --- 3.6. Construction Area Six --- */
-.construct_area_six{
+/* --- 3.5. Construction Area Five --- */
+.construct_area_five{
 	position: relative;
 	min-height: 475px;
 	background-size: cover;
@@ -1173,7 +1211,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-position: center;
 }
 
-.construct_area_six::before {
+.construct_area_five::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -1183,8 +1221,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background: rgba(0, 0, 0, 0.6);
 }
 
-/* --- 3.7. Construction Area Seven --- */
-.construct_area_seven{
+/* --- 3.6. Construction Area Six --- */
+.construct_area_six{
 	position: relative;
 	z-index: 1;
 	max-width: 1200px;
@@ -1192,7 +1230,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 }
 
-.construct_group_seven{
+.construct_group_six{
 	width: 100%;
 	padding: 40px 10px 0;
 	background-color: #ffffff;
@@ -1205,9 +1243,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .client_comment p{
-	font-family: 'Montserrat', Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 	font-size: 16px;
-	font-weight: 500;
+	font-weight: normal;
 	display: inline-block;
 	color: #696969;
 	letter-spacing: 1px;
@@ -1253,11 +1291,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .client_title{
-	font-family: 'Raleway', Arial, sans-serif;
+	font-family: 'Montserrat', Arial, sans-serif;
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #1a2980;
+	color: #696969;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
@@ -1271,9 +1309,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 8px;
 }
 
-.client_icon .material-symbols-outlined.icon-25{
+.client_icon .fi{
 	font-size: 25px;
-	font-weight: 300;
 	color: #ffc91a;
 	display: inline-block;
 	text-align: center;
@@ -1314,12 +1351,12 @@ li.slick-active button{
 	margin: 22px 4px 0 4px;
 }
 
-.construct_area_seven .slick-list{
+.construct_area_six .slick-list{
 	overflow: visible;
 }
 
-/* --- 3.8. Construction Area Eight --- */
-.construct_area_eight{
+/* --- 3.7. Construction Area Seven --- */
+.construct_area_seven{
 	position: relative;
 	z-index: 99;
 	max-width: 1200px;
@@ -1328,7 +1365,7 @@ li.slick-active button{
 	margin-bottom: calc(9em + 80px);
 }
 
-.construct_group_eight{
+.construct_group_seven{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1492,8 +1529,8 @@ li.slick-active button{
 	border-top-left-radius: 25%;
 }
 
-/* --- 3.9. Construction Area Nine --- */
-.construct_area_nine{
+/* --- 3.8. Construction Area Eight --- */
+.construct_area_eight{
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -1506,7 +1543,7 @@ li.slick-active button{
 	padding: 4em 0;
 }
 
-.construct_area_nine::before {
+.construct_area_eight::before {
 	content: '';
 	position: absolute;
 	z-index: 1;
@@ -1517,23 +1554,12 @@ li.slick-active button{
 	background: rgba(24, 25, 34, 0.6);
 }
 
-.construct_group_nine{
+.construct_group_eight{
 	max-width: 750px;
 	position: relative;
 	z-index: 999;
 	margin: 0 auto;
 	padding: 0 10px;
-}
-
-.construct_group_nine h2{
-	color: #ffffff;
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	text-align: center;
-	letter-spacing: 1px;
-	line-height: 1.2em;
 }
 
 .bg_col_button a{
@@ -1560,15 +1586,15 @@ li.slick-active button{
 	border-color: #ffffff;
 }
 
-/* --- 3.10. Construction Area Ten --- */
-.construct_area_ten{
+/* --- 3.9. Construction Area Nine --- */
+.construct_area_nine{
 	position: relative;
 	max-width: 1280px;
 	margin: -80px auto 2em;
 	padding: 0 25px;
 }
 
-.construct_group_ten{
+.construct_group_nine{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -1803,11 +1829,11 @@ a.footer-logo img{
 	}
 	
 	.construct_area_two{
-		margin-bottom: calc(9em + 40px);
+		margin-bottom: 9em;
 	}
 	
-	.construct_area_eight{
-		margin-bottom: 9em;
+	.construct_area_seven{
+		margin-bottom: calc(9em + 40px);
 	}
 }	
 
@@ -1924,7 +1950,7 @@ a.footer-logo img{
 	}
 	
 	.construct_area_two{
-		margin-bottom: calc(9em + 65px);
+		margin-bottom: calc(9em + 35px);
 	}
 	
 	.square_col_left{
@@ -1938,17 +1964,17 @@ a.footer-logo img{
 		margin-top: 60px;
 	}
 	
-	.grid_col{
-		flex: 50%;
-		width: 50%;
+	.bg_col{
+		flex: 100%;
+		width: 100%;
+		min-height: 450px;
 	}
 	
-	.construct_group_four{
-		max-width: 500px;
-		margin-left: auto;
-		margin-right: auto;
+	.bg_area{
+		min-height: 450px;
 	}
 	
+	.first_border,
 	.second_border{
 		border-right: none;
 	}
@@ -1973,7 +1999,7 @@ a.footer-logo img{
 	.info_col{
 		flex: 100%;
 		width: 100%;
-		margin-top: 80px;
+		margin-top: 90px;
 	}
 	
 	.cube_col{
@@ -1999,6 +2025,7 @@ a.footer-logo img{
 	
 	.square_box h2,
 	.bg_head,
+	.construct_head,
 	.info_box h2,
 	.right_info_box h2,
 	.info_head h2,
@@ -2030,14 +2057,12 @@ a.footer-logo img{
 		max-width: 200px;
 	}
 	
-	.grid_col{
-		flex: 100%;
-		width: 100%;
+	.bg_col{
+		min-height: 350px;
 	}
 	
-	.first_border,
-	.third_border{
-		border-right: none;
+	.bg_area{
+		min-height: 350px;
 	}
 	
 	.portfolio_col{
@@ -2111,6 +2136,10 @@ a.footer-logo img{
 	
 	.icon_bottom{
 		margin-top: 0;
+	}
+	
+	.bg_content h3{
+		font-size: 20px;
 	}
 	
 	.base_content{
